--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,9 @@ find_package(Qt5 REQUIRED Core Widgets Gui Charts)
 include_directories(${PROJECT_SOURCE_DIR}/include/, ${PROJECT_SOURCE_DIR}/vendor/include/) 
 
 set(CMAKE_BUILD_WITH_INSTALL_RPATH on)
-set(CMAKE_INSTALL_RPATH "./vendor/lib" "./lib")
+set(CMAKE_INSTALL_RPATH "./vendor/lib" "./lib" "./vendor/usr/lib/x86_64-linux-gnu")
 link_directories(./vendor/lib)
+link_directories(./vendor/usr/lib/x86_64-linux-gnu)
 
 file(GLOB_RECURSE APP_SOURCES CONFIGURE_DEPENDS "${PROJECT_SOURCE_DIR}/src/*.h" "${PROJECT_SOURCE_DIR}/src/*.hpp" "${PROJECT_SOURCE_DIR}/src/*.cpp")
 file(GLOB_RECURSE VENDOR_SOURCES CONFIGURE_DEPENDS "${PROJECT_SOURCE_DIR}/vendor/src/*.h" "${PROJECT_SOURCE_DIR}/vendor/src/*.hpp" "${PROJECT_SOURCE_DIR}/vendor/src/*.cpp")
